Fix tests for submitted and committed